<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2015 MaxiCM
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<resources>
    <!-- MaxiOTA main strings -->
    <string name="app_name">MaxiCenter</string>
    <string name="menu_settings">Settings</string>
    <string name="device_title">Device</string>
    <string name="device_name_title">Name:</string>
    <string name="codename_title">Codename:</string>
    <string name="version_title">Version:</string>
    <string name="file_name_title">File:</string>
    <string name="curVer">Current Version</string>
    <string name="ok">OK</string>
    <string name="title_update">Update</string>
    <string name="device_info_title">Device Information</string>
    <string name="up_to_date_title">Your system is up to date</string>
    <string name="no_data_title">No data connection available</string>
    <string name="error_reading_title">Cannot read MaxiOTA properties</string>
    <string name="update_file_title">Update:</string>
    <string name="ota_title">MaxiOTA</string>
    <string name="reboot">All done! Reboot your device now.</string>
    <string name="reboot_ok">Reboot now</string>
    <string name="reboot_cancel">Don\'t reboot</string>

    <!-- MaxiOTA settings -->
    <string name="settings_title">MaxiOTA Settings</string>
    <string name="about_title">About</string>
    <string name="update_interval_title">Automatic update check interval</string>
    <string name="update_interval_summary">Set automatic update check interval</string>
    <string name="update_interval_day">Every 24 hours</string>
    <string name="update_interval_half_day">Every 12 hours</string>
    <string name="update_interval_hour">Every hour</string>
    <string name="update_interval_disable">Disable</string>

    <!-- MaxiOTA error messages -->
    <string name="system_prop_error">Cannot read system properties</string>
    <string name="bad_url">Unable to get to download area.\nPlease inform your MaxiCM device maintainer!</string>
    <string name="menu_update">Look for Updates now</string>
    <string name="toast_text">Looking for ROM updates, please wait.</string>
    <string name="toast_no_data_text">No data connection. Please turn on</string>

    <!-- MaxiOTA shortcut fragment -->
    <string name="short_cut_release_title">ROM related</string>
    <string name="short_cut_changelog_title">Changelog</string>
    <string name="short_cut_changelog_summary_update_available">Important!!! Read changelog and install instructions carefully</string>
    <string name="short_cut_download_summary_update_available">New MaxiCM update available. Download here!</string>
    <string name="short_cut_changelog_summary">Show changelogs and install instructions</string>
    <string name="short_cut_additional_title">Additional</string>
    <string name="short_cut_faq_title">FAQ</string>
    <string name="short_cut_faq_summary">Show Maxi FAQ</string>
    <string name="short_cut_news_title">News</string>
    <string name="short_cut_news_summary">Read about latest MaxiCM news</string>
    <string name="short_cut_download_title">Download MaxiCM</string>
    <string name="short_cut_download_uptodate_summary">Download MaxiCM</string>
    <string name="short_cut_download_gapps_title">Download gapps</string>
    <string name="short_cut_download_gapps_summary">Download maxiCM addon packages</string>

    <string name="download_url" translatable="false">http://maxicm.com</string>
    <string name="changelog_url" translatable="false">https://raw.githubusercontent.com/MaxiCM/CHANGELOG/master/changelog.mkdn</string>
    <string name="faq_url" translatable="false">andresmora1676@gmail.com</string>
    <string name="news_url" translatable="false">http://maxicm.com</string>
    <string name="gapps_url" translatable="false">https://github.com/maxicm-ota-server/OTA-Gapps/blob/master/Maxi-5.1.x-Gapps.zip?raw=true</string>
    <string name="gapps_url_kitkat" translatable="false"></string>

    <!-- MaxiOTA update checker -->
    <string name="xml_url" translatable="false">http://maxicm-ota-server.github.io/ota.xml</string>
    <string name="xml_url_kitkat" translatable="false"></string>
    <string name="notification_message">MaxiCM update available</string>

    <!-- MaxiOTA About -->
    <string name="about_home_url" translatable="false"><a href="http://www.maxicm.com">www.MaxiCM.com</a></string>
    <string name="about_maxi_ota">MaxiCenter allows you to easily manage\n your ROM!</string>
    <string name="about_copyright" translatable="false">\u00A9 Copyright MaxiCM 2015</string>
    <string name="about_version" translatable="false">MaxiCenter 1.1</string>
    <string name="about_contact"><a href="andresmora1676@gmail.com">Contact us</a></string>
    <string name="about_contact_text">Tell us what you think\nor let us know about a bug or problem</string>
    <string name="about_license">Open source licenses</string>
    <string name="about_license_text">MaxiCenter app:</string>
    <string name="about_license_url" translatable="false"><a href="">gpl(2)</a></string>
    <string name="menu_maxisizer">MaxiSizer</string>

    <!-- MaxiSizer  -->
    <string name="listsystem">list</string>
    <string name="sizer_title">MaxiSizer</string>
    <string name="caution">Caution!</string>
    <string name="sizer_message_startup">This tool allows you to delete system apps. Use with caution and only delete apps you know are safe to be removed.</string>
    <string name="cancel">Cancel</string>
    <string name="sizer_message_delete">Are you sure you want to delete this app?</string>
    <string name="sizer_message_delete_multi_one">Are you sure you want to delete selected app?</string>
    <string name="sizer_message_delete_multi">Are you sure you want to delete selected apps?</string>
    <string name="btn_delete">Delete selected APPs now!</string>
    <string name="delete_progress_title">Deleting</string>
    <string name="delete_progress">Selected files are being deleted, please wait.</string>
    <string name="delete_success">Deleted</string>
    <string name="delete_fail">Unable to delete</string>
    <string name="btn_profile">Profile</string>
    <string name="sizer_message_sdnowrite">Cannot write to SD Card.</string>
    <string name="sizer_message_sdnoread">Cannot read SD Card.</string>
    <string name="sizer_message_filesuccess">Created profile.</string>
    <string name="sizer_message_filefail">Failed to create profile.</string>
    <string name="sizer_message_noselect">Nothing selected.</string>
    <string name="sizer_profile_load">Load Profile</string>
    <string name="sizer_profile_save">Save Profile</string>

    <!-- About -->
    <string name="aboutmaxi_title">MaxiCM</string>
    <string name="devs">Developer</string>
    <string name="maxi_website_title">MaxiCM Website</string>
    <string name="maxi_website_summary">www.maxicm.com\nFind all latest MaxiCM news here</string>
    <string name="maxi_irc_title">MaxiCM IRC</string>
    <string name="maxi_irc_summary">Join our IRC channel!\nChat with the MaxiCM Team and other users</string>
    <string name="maxi_donate_title">Donate</string>
    <string name="maxi_donate_summary">Donate to MaxiCM Team</string>
    <string name="maxi_source_title">MaxiCM Source</string>
    <string name="maxi_source_summary">MaxiCM are fully open source.\nSource at github.com/MaxiCM</string>
    <string name="no_irc">MaxiCM IRC App not found.</string>
    <string name="no_irc_unofficial">MaxiCM IRC is not available on unofficial builds.</string>
    <string name="center_summary"><b>MaxiCenter</b> provides tools &amp; information to help make your experience with MaxiCM even better. Upgrade automatically to the newest version of our ROM with <b>MaxiOTA</b> and remove unwanted system apps with <b>MaxiSizer</b>.</string>
    <string name="maxi_bugreport">Bugreport</string>
    <string name="maxi_bugreport_summary">Create a complete Bugreport.</string>
    <string name="report_infosuccess">Created Systemreport, provide it to MaxiCM Team by attaching it to your Bugreport! You can find the Zip file on your SD-Card in a directory called \"maxi\".</string>
    <string name="report_infofail">Failed to create Bugreport, please try again.</string>

</resources>
