<?xml version="1.0" encoding="utf-8"?>
<!--
 *=========================================================================
 *
 *  PROJECT:  MaxiCM
 *            MaxiCM Team (http://www.MaxiCM.com)
 *
 *  COPYRIGHT Copyright (C) 2015 MaxiCM Team http://www.MaxiCM.com
 *            All rights reserved
 *
 *  LICENSE   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 *
 *  AUTHORS:     MaxiCM Team, XperiAMM
 *  DESCRIPTION: MaxiOTA keeps our rom up to date
 *
 *=========================================================================
 *
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maxiOta"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_maxiota" />

    <TextView
        android:id="@+id/about_home"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:layout_below="@id/logo"
        android:text="@string/about_home_url"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_version"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_home"
        android:text="@string/about_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_copyright"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_version"
        android:text="@string/about_copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_maxi_ota"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_copyright"
        android:layout_marginTop="20dip"
        android:text="@string/about_maxi_ota"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/line"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/about_maxi_ota"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/line"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/about_contact"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginTop="20dip"
        android:text="@string/about_contact"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_contact_text"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_contact"
        android:text="@string/about_contact_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_license"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_contact_text"
        android:layout_marginTop="20dip"
        android:text="@string/about_license"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_license_text"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_license"
        android:text="@string/about_license_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/about_license_url"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_license_text"
        android:text="@string/about_license_url"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
