<?xml version="1.0" encoding="utf-8"?>
<!--
 *=========================================================================
 *
 *  PROJECT:  MaxiCM
 *            MaxiCM Team (http://www.MaxiCM.com)
 *
 *  COPYRIGHT Copyright (C) 2015 MaxiCM Team http://www.MaxiCM.com
 *            All rights reserved
 *
 *  LICENSE   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 *
 *  AUTHORS:     MaxiCM Team, XperiAMM
 *  DESCRIPTION: MaxiOTA keeps our rom up to date
 *
 *=========================================================================
 *
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:key="update_interval"
        android:dialogTitle="@string/update_interval_title"
        android:title="@string/update_interval_title"
        android:summary="@string/update_interval_summary"
        android:entries="@array/entries_update_interval"
        android:entryValues="@array/values_update_interval" />
</PreferenceScreen>
